# freecad_material

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
LICENSES/: Apache-2.0.md  MIT.md
src/freecad_material/: __init__.py  fcmat.py
tests/: test_fcmat.py
