# SPDX-FileCopyrightText: 2026 Michael Cummings
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[project]
name = "freecad-material"
version = "0.1.0"
description = "Pure Python library for reading, writing, and manipulating FreeCAD FCMat material files with full round-trip fidelity."
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = [
    { name = "Michael Cummings", email = "mgcummings@yahoo.com" }
]
requires-python = ">=3.11"
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
[dependency-groups]
build = [
    "uv-build>=0.10.0,<0.20.0",
]
dev = [
    "pyfakefs>=6.1.1",
    "pytest>=9.0.2",
    "pytest-clarity>=1.0.1",
    "pytest-cov>=7.0.0",
    "pytest-icdiff>=0.9",
    "pytest-randomly>=4.0.1",
    "pytest-xdist>=3.8.0",
    "types-regex>=2026.2.19.20260221",
    "xdoctest>=1.3.0",
]

[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"

[tool.coverage.run]
branch = true
source = ["src"]
# Omit tests from a coverage collection
omit = [
    "tests/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
omit = [
    "tests/*",
]

[tool.pytest.ini_options]
# Discover tests only within this package directory
testpaths = ["tests"]
# Make `src/` importable so tests can `import epublisher`
pythonpath = ["src"]
# Default options: quiet output; enable coverage and parallel runs.
addopts = [
    "-q",
    "--maxfail=1",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--import-mode=importlib",
    "--no-cov-on-fail",
    "--xdoctest",
    "-n",
    "logical",
]
#addopts = "-q --cov=src --cov-report=term-missing -n auto"
# Keep noise down from any third-party deprecations
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.uv.build-backend]
module-root = "src"
module-name = "freecad_material"
